Adição de parágrafo

--- a/site_exemplo/index.html
+++ b/site_exemplo/index.html
@@ -11,5 +11,6 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ab. Quibusdam repudiandae distinctio, omnis iste, veritatis commodi numquam vero consectetur cumque doloremque unde aliquam? Laudantium ipsam dicta officia fugiat maxime!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus fuga, in cupiditate distinctio unde quasi maiores vero harum veritatis autem numquam tempora corporis repudiandae alias repellendus. Blanditiis maxime quasi recusandae.</p>
 </body>
 </html>
